# thinning

./: README.md
api/: pyproject.toml
api/src/api/: __init__.py
api/src/core/: hilditch.py  thinning.py
api/src/utils/: image.py
ui/: package-lock.json  package.json
ui/src/: app.tsx  main.tsx
